# linux-screenrecord

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  screenrecord.c  screenrecord.cpp
audio/: audio_encoder.h  audio_grab.h  faac_encoder.cpp  faac_encoder.h  pulse_audio_grab.cpp  pulse_audio_grab.h  sample_format.h
avformat/: avformat_encoder.h  flv_encoder.cpp  flv_encoder.h
muxer/: flvenc.cpp
src/: image.h  screengrab.h  video_encoder.h  x264_encoder.cpp  x264_encoder.h  xcb_screengrab.h  xcb_screengrag.cpp
video/: image.h  screen_grab.h  video_encoder.h  x264_encoder.cpp  x264_encoder.h  xcb_screen_grab.cpp  xcb_screen_grab.h
